build components and pass fetched data down. start styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+body {
+	margin: 0;
+	background: hsl(180, 52%, 96%);
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+	display: flex;
+	justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.app_header {
+	  background: hsl(180, 29%, 50%);
+	  background-image: url(/public/assets/images/bg-header-mobile.svg);
+	  height: 9rem;
+  }
+
+@media only screen and (min-width: 400px) {
+  .app_header {
+	  background-image: url(/public/assets/images/bg-header-desktop.svg);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card_list {
+	width: 400px;
+	
 }
 
-.App-link {
-  color: #61dafb;
+.card_logo {
+	height: 50px;
+	width: 50px;
+	border: 1px solid magenta;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
