--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap');
+
 body {
 	margin: 0;
 	background: hsl(180, 52%, 96%);
+	font-size: 1rem;
+	font-family: 'Spartan', sans-serif;
 }
 
 .App {
@@ -16,24 +20,24 @@ body {
 	  background: hsl(180, 29%, 50%);
 	  background-image: url(/public/assets/images/bg-header-mobile.svg);
 	  height: 9rem;
-  }
+ }
+
+.card_list {
+	width: 400px;
+}
 
 @media only screen and (min-width: 400px) {
   .app_header {
 	  background-image: url(/public/assets/images/bg-header-desktop.svg);
   }
+
+  .card_list {
+	width: 90%;
+}
 }
 
-.card_list {
-	width: 400px;
-	
-}
 
-.card_logo {
-	height: 50px;
-	width: 50px;
-	border: 1px solid magenta;
-}
+
 
 
 
