--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,129 @@
 .card {
-	height: 400px;
-	width: 400px;
+	text-align: left;
+	height: 280px;
+	width: 350px;
 	background: white;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 0 1.5rem 1.5rem 1.5rem;
 	margin-bottom: 3rem;
+	padding: 0 1.5rem;
+	box-sizing: border-box;
+	border-radius: 7px;
+	box-shadow: 3px 8px 19px hsla(180, 52%, 87%, 1);
+}
+
+.card_info {
+	position: relative;
+    margin-top: -15px;
 }
 
 .card_logo {
 	height: 50px;
 	width: 50px;
-	border: 1px solid magenta;
+	position: relative;
+    top: -25px;
 }
+
+.card_info_head {
+	font-weight: 700;
+	font-size: .8rem;
+}
+
+.company {
+	color: hsl(180, 29%, 50%);
+	margin-right: 1.1rem;
+}
+
+.highlight {
+	color: white;
+	text-transform: uppercase;
+	padding: 10px 10px 5px 10px;
+    border-radius: 20px;
+}
+
+.highlight_new {
+	background-color: hsl(180, 29%, 50%);
+	margin-right: .6rem;
+}
+
+.highlight_featured {
+	background-color: black;
+}
+
+.title {
+	font-weight: 700;
+	margin: 1rem 0;
+}
+
+.details {
+	color: hsl(180, 8%, 52%);
+	font-size: .9rem;
+	padding-bottom: 1rem;
+	margin-bottom: 1rem;
+	border-bottom: 1px solid hsl(180, 8%, 52%);
+}
+.bullet {
+	margin: .5rem;
+}
+
+.card_tags {
+	color: hsl(180, 29%, 50%);
+	font-weight: 700;
+	font-size: .8rem;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.tag {
+	padding: 10px 10px 5px 10px;
+	border-radius: 3px;
+	background-color: hsl(180, 52%, 96%);
+}
+
+@media only screen and (min-width: 850px) {
+	.card {
+		width: 90%;
+		height: 9rem;
+		margin-bottom: 1.5rem;
+		padding: 2.2rem;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.card_start {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+	}
+	.card_logo {
+		width: 5rem;
+		height: 5rem;
+		margin-right: 1.5rem;
+		top: 0;
+	}
+	.title{
+		margin: .7rem 0;
+		font-size: 1.1rem;
+	}
+	.card_info {
+	  margin-top: 2.3rem;
+		width: 260px;
+	}
+	.highlight {
+		padding: 7px 9px 4px 9px;
+    	font-size: .7rem;
+	}
+	.details {
+		border: none;
+	}
+	.card_tags {
+	  height: 5rem;
+	  align-items: center;
+	}
+	.tag {
+	  height: 1rem;
+	}
+	}
